<resources>
    <string name="app_name" translatable="false">G-launcher</string>
    <string name="lock_layout_description" translatable="false">lock layout description to be used a unique id to lock screen</string>
    <string name="recents_layout_description" translatable="false">recents layout description to be used a unique id to show recent apps</string>
    <string name="digital_minimalism" translatable="false"><u>Digital Minimalism</u></string>
    <string name="day_battery" formatted="false" translatable="false">%s, %d%%</string>
    <string name="tag_0" translatable="false">0</string>
    <string name="app_search_hint" translatable="false">&gt; app</string>
    <string name="time_spent_min" translatable="false"><b>%1$sm</b></string>
    <string name="time_spent_hour" translatable="false">%1$sh %2$sm</string>
    <string name="app">App</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="set_as_default_launcher_u"><u>Set as default launcher</u></string>
    <string name="set_as_default_launcher_first">Set G-launcher default first</string>
    <string name="app_text_color">Text color</string>
    <string name="double_tap_to_lock_screen">Double tap to lock</string>
    <string name="home_button_show_recents">Home button for recents</string>
    <string name="admin_permission_message">G-launcher promises to use the accessibility permission responsibly. G-launcher does not collect or share any data.</string>
    <string name="about">About</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="share">Share</string>
    <string name="share_now">Share now</string>
    <string name="rate">Rate</string>
    <string name="rate_now">Rate now</string>
    <string name="follow">Follow</string>
    <string name="email">Email</string>
    <string name="donate">Donate</string>
    <string name="swipe_up_for_apps">1. Swipe up for all apps\n2. Long press anywhere for settings</string>
    <string name="daily_wallpaper_update">Daily new wallpaper</string>
    <string name="galatea_settings">Galatea backend</string>
    <string name="galatea_server_url_hint">Server URL (http://host:port)</string>
    <string name="galatea_api_key_hint">API key</string>
    <string name="galatea_settings_saved">Galatea settings saved</string>
    <string name="galatea_connected">Galatea: connected</string>
    <string name="galatea_disconnected">Galatea: disconnected</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="home_layout_alignment">App alignment</string>
    <string name="swipe_left_app">Swipe left app</string>
    <string name="swipe_right_app">Swipe right app</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="app_drawer_tips">Tip: Start typing an app name to auto-launch it</string>
    <string name="okay">Okay</string>
    <string name="cool">Cool!</string>
    <string name="auto_show_keyboard">Auto show keyboard</string>
    <string name="hide">Hide</string>
    <string name="status_bar">Status bar on top</string>
    <string name="rename">Rename</string>
    <string name="show_date_time">Show date time</string>
    <string name="appearance">Appearance</string>
    <string name="gestures">Gestures</string>
    <string name="theme_mode">Theme mode</string>
    <string name="system_default">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="welcome_to_olauncher_settings">Welcome to the settings!</string>
    <string name="rate_us_message">Hi, you won\'t see this message again.
        \n\nIf you\'re finding G-launcher useful, could you please leave a 5-star review? It\'ll mean the world to us. Thank you!</string>
    <string name="share_message">We need your help! We believe everyone should know about G-launcher and its benefits, but we can\'t do it alone.
        \n\nCould you please share G-launcher with your friends, family, and followers? Thank you for your support! ❤</string>
    <string name="keyboard_message">Hi, keyboard is the fastest way to find and launch apps in G-launcher. Can we request you to keep this On for a few more days and then decide?
        \n\nThe choice is always yours.</string>
    <string name="digital_wellbeing_message">If you want to set time limits for certain apps, Digital Wellbeing feature of Android can help you do it.           Please search for Digital Wellbeing in your phone settings and enable it.</string>
    <string name="app_usage_message">To show/hide your screen time on the home screen, please allow or disallow the app usage permission.
        \n\nNote: No app usage data is collected. Everything is processed on your device.</string>
    <string name="wallpaper_message">G-launcher offers beautiful new wallpapers daily. Give your homescreen a fresh new look every day, for free!
        \n\nWant to try it?</string>
    <string name="accessibility_service_description">The accessibility permission is required to enable double tap to lock and home button to show recent apps. Any data acquired by G-launcher via this service will not leave your device.</string>
    <string name="support_olauncher_for_free">Support G-launcher for free by using our Amazon affiliate link.</string>
    <string name="support_olauncher_message">Every time you buy something using our link, we get a small commission. Please save the link and use it whenever you shop online.\nThank you!</string>
    <string name="open">Open link</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="not_now">Not now</string>
    <string name="public_roadmap">G-launcher public roadmap</string>
    <string name="instagram">Instagram</string>
    <string name="roadmap">Roadmap</string>
    <string name="date">Date</string>
    <string name="date_only">Date only</string>
    <string name="bottom_on">Bottom: On</string>
    <string name="bottom_off">Bottom: Off</string>
    <string name="please_set_olauncher_as_default_first">Please set G-launcher as default first</string>
    <string name="affiliate">Affiliate</string>
    <string name="tip_start_typing_for_rename">Tip: Start typing for app RENAME option</string>
    <string name="hidden_apps_message">Note: Tap on \'G-launcher\' at the top of this Settings page to find your hidden apps.</string>
    <string name="swipe_down_for">Swipe down for</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="accessibility_disclosure">Please turn on G-launcher\'s accessibility service in your device\'s settings to enable Double tap to lock or Home button for recent apps gestures.
    \n\nPlease note that this service is only used for these gestures. Our accessibility service does not collect or share any data.</string>
    <string name="accept">Accept</string>
    <string name="permission">Permission</string>
    <string name="double_tap_lock">Double tap to lock</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="not_working"><u>Not working?</u></string>
    <string name="info">Info</string>
    <string name="delete">Uninstall</string>
    <string name="text_size">Text size</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="please_turn_on_double_tap_to_unlock">Please turn on double tap to lock</string>
    <string name="launcher_failed_to_lock_device">G-launcher failed to lock device.\nPlease check your app settings.</string>
    <string name="long_press_to_select_app">Long press to select app</string>
    <string name="unable_to_open_app">Unable to open app</string>
    <string name="copied">Copied</string>
    <string name="system_app_cannot_delete">System app, cannot delete</string>
    <string name="app_not_found">App not found</string>
    <string name="unable_to_launch_app">Unable to launch app</string>
    <string name="search_for_Launcher_or_home_app">Search for Launcher or Home app</string>
    <string name="swipe_left_app_enabled">Swipe left app enabled</string>
    <string name="swipe_right_app_enabled">Swipe right app enabled</string>
    <string name="swipe_left_app_disabled">Swipe left app disabled</string>
    <string name="swipe_right_app_disabled">Swipe right app disabled</string>
    <string name="your_wallpaper_will_update_shortly">Your wallpaper will update shortly</string>
    <string name="olauncher_is_not_default_launcher">G-launcher is not default. Wallpaper update will fail.</string>
    <string name="long_press_to_enable">Long press to enable</string>
    <string name="no_hidden_apps">No hidden apps</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="adapter_show">Show</string>
    <string name="adapter_hide">Hide</string>
    <string name="are_you_using_your_phone_or_is_your_phone_using_you">Are you using your phone, or is your phone using you?</string>
    <string name="screen_time">Screen time</string>
    <string name="learn_more">Learn more</string>
    <string name="did_you_know">Did you know?</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="review_message">G-launcher is free and always will be. It has no ads, collects no data, and reduces your screen time, resulting in a healthier life.
        \n\nWe hope you enjoy it. Tell us what you think.</string>
    <string name="alignment_changed">Alignment changed ✅</string>
    <string name="home_screen">Home screen</string>
    <string name="hey">Hey</string>
    <string name="new_year_wish">Here\'s to a year better than any before. Happy new year!</string>
    <string name="new_year_wish_1">It doesn\'t matter how January went. You still have the rest of the year to do better than ever.</string>
    <string name="cheers">Cheers!</string>
    <string name="notification_bar">Notification bar</string>
    <string name="private_space">Private space</string>
    <string name="app_lock">App Lock</string>
    <string name="app_lock_configure_pin">Configure PIN</string>
    <string name="app_lock_change_pin">Change PIN</string>
    <string name="app_lock_use_fingerprint">Use fingerprint</string>
    <string name="app_lock_locked_apps">Locked apps</string>
    <string name="no_locked_apps">No locked apps</string>
    <string name="adapter_lock">Lock</string>
    <string name="adapter_unlock">Unlock</string>
    <string name="locking_pinned_shortcuts_not_supported">Locking pinned shortcuts is not supported</string>
    <string name="pin_create_title">Create a PIN</string>
    <string name="pin_confirm_title">Confirm your PIN</string>
    <string name="pin_mismatch">PINs don\'t match. Try again.</string>
    <string name="pin_too_short">PIN must be at least 4 digits</string>
    <string name="pin_incorrect">Incorrect PIN</string>
    <string name="pin_too_many_attempts">Too many attempts. Try again in %1$d s</string>
    <string name="biometric_prompt_title">Unlock app</string>
    <string name="biometric_prompt_subtitle">Use your fingerprint to continue</string>
    <string name="biometric_prompt_use_pin">Use PIN instead</string>
    <string name="app_lock_enable_requires_pin">Set up a PIN first to enable App Lock</string>
</resources>